--- a/apps/redoose_app/templates/redoose_app/index.html
+++ b/apps/redoose_app/templates/redoose_app/index.html
@@ -72,8 +72,7 @@
         <div class="left-half middle">
             <h1>Did you know?
             <p>Plastic can take 500+ years to degrade.</p>
-            <p>That means if William Shakespeare drank a water bottle<br> while writing "A Midsummer Night's Dream",<br>the water bottle would still exist today.<br>...all before the Mayflower arrived in Plymouth,
-            Massachusetts,<br>...all before Isaac Newton discovered the laws of motion.</p>
+            <p>That means if William Shakespeare drank a water bottle<br> the water bottle would still exist today.<br></p>
             </h1>
         </div>
         <div class="right-half">
